[package]
name = "nilauth-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
nilchain-client = { git = "https://github.com/NillionNetwork/nilchain-client-rs.git", rev = "958674cd4d667632c469e2d210fb3b6e1867ab7c" } 
nillion-nucs = { git = "https://github.com/NillionNetwork/nuc-rs.git", rev = "687657acd08f2543e5c0d75e910eb9f1b1152d00" } 
tracing = "0.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.44", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }
