[package]
name = "nilauth-client"
version = "1.0.0-rc.1"
edition = "2024"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
hex = { version = "0.4", features = ["serde"] }
nilchain-client = { git = "https://github.com/NillionNetwork/nilchain-client-rs.git", rev = "958674cd4d667632c469e2d210fb3b6e1867ab7c" }
nillion-nucs = { git = "https://github.com/NillionNetwork/nuc-rs", rev = "928bfb9bb1816396afbda33a6c5aa955a6b11641" }
tracing = "0.1"
rand = "0.8" # Leave at 0.8 to avoid `rand_core` conflicts with `k256` 0.13
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.47", features = ["time"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
